--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
         <div id="vue-app">
-          <h1>{{message}}</h1>
+          <!-- <h1>{{getName()}}</h1> -->
+          <h1>{{setName('Soul')}}</h1>
         </div>
         <script src="app.js" charset="utf-8"></script>
 
