--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
   <body>
         <div id="vue-app">
           <!-- <h1>{{getName()}}</h1> -->
-          <h1>{{setName('Soul')}}</h1>
+          <!-- <h1>{{setName('Soul')}}</h1> -->
+          <h1>Name : {{name}}</h1>
+          <h1>Job : {{job}}</h1>
+          <h1>Age : {{age}}</h1>
+          <h1>Github : <a v-bind:href="github">NLGRF</a></h1>
+          <input type="text" name="" v-bind:value="name">
+          <input type="text" name="" v-bind:value="job">
         </div>
         <script src="app.js" charset="utf-8"></script>
 
