--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
           <h1>Job : {{job}}</h1>
           <h1>Age : {{age}}</h1>
           <h1>Github : <a v-bind:href="github">NLGRF</a></h1>
-          <input type="text" name="" v-bind:value="name">
-          <input type="text" name="" v-bind:value="job"></br></br>
-          <button type="button" name="button" v-on:click="addAge()">Add</button>
-          <button type="button" name="button" v-on:click="subtractAge()">Subtract</button>
+          <input type="text" v-on:keyup.enter="addCount">
+          <h1>Count : {{count}}</h1>
+          <button type="button" name="button" v-on:click="addAge">Add</button>
+          <button type="button" name="button" v-on:click="subtractAge">Subtract</button>
         </div>
         <script src="app.js" charset="utf-8"></script>
 
