--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
   <body>
         <div id="vue-app">
           Name : <input type="text" v-model="name">
+          Food Fav :
+          <input type="checkbox" value="ส้มตำ" v-model="foods">
+          <label>ส้มตำ</label>
+          <input type="checkbox" value="พิซซ่า" v-model="foods">
+          <label>พิซซ่า</label>
+          <input type="checkbox" value="มาม่า" v-model="foods">
+          <label>มาม่า</label>
+
+          <br>
           <hr>
           <h1>Name : {{name}}</h1>
           <h1>Job : {{job}}</h1>
           <h1>Github : <a v-bind:href="github">NLGRF</a></h1>
+          <h1>Foods : {{foods}}</h1>
         </div>
         <script src="app.js" charset="utf-8"></script>
 
