Method VS Computed

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
               {{emp.empName}} ได้เงินเดือน {{emp.salary}}
             </li>
           </ul>
+          <h1>จำนวนเงินที่ต้องจ่ายพนักงาน : {{summation}}</h1>
+          <h1>ค่าเฉลี่ย : {{avg}}</h1>
         </div>
         <script src="app.js" charset="utf-8"></script>
 
