--- a/index.html
+++ b/index.html
@@ -6,21 +6,16 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
   </head>
   <body>
-        <div id="vue-app">
-          <span>ชื่อพนักงาน</span>
-          <input v-model="newData.empName">
-          <span>เงินเดือน</span>
-          <input v-model="newData.salary">
-          <br><br>
-          <button @click="addEmp">บันทึกข้อมูล</button>
-          <br>
-          <ul>
-            <li v-for="emp in empGroup">
-              {{emp.empName}} ได้เงินเดือน {{emp.salary}}
-            </li>
-          </ul>
-          <h1>จำนวนเงินที่ต้องจ่ายพนักงาน : {{summation}}</h1>
-          <h1>ค่าเฉลี่ย : {{avg}}</h1>
+        <div id="post">
+          หัวข้อ : {{title}} </br>
+          ข้อความ : {{message}}
+        </div>
+        <div id="comment">
+          <textarea name="name" rows="8" cols="80">{{text}}</textarea>
+        </div>
+        <div id="likeSystem">
+          <button type="button" name="button" v-on:click="like=!like">like</button>
+          {{like}}
         </div>
         <script src="app.js" charset="utf-8"></script>
 
