--- a/index.html
+++ b/index.html
@@ -6,17 +6,10 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
   </head>
   <body>
-        <div id="post">
-          หัวข้อ : {{title}} </br>
-          ข้อความ : {{message}}
-        </div>
-        <div id="comment">
-          <textarea name="name" rows="8" cols="80">{{text}}</textarea>
-        </div>
-        <div id="likeSystem">
-          <button type="button" name="button" v-on:click="like=!like">like</button>
-          {{like}}
-        </div>
+    <div id="vue-app">
+        <Non></Non><br>
+        <Post></Post>
+    </div>
         <script src="app.js" charset="utf-8"></script>
 
   </body>
