--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   </head>
   <body>
     <div id="vue-app">
-        <Non></Non><br>
-        <Post></Post>
+        <Post title="Non Robot"></Post>
     </div>
         <script src="app.js" charset="utf-8"></script>
 
