--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <body>
     <div id="vue-app">
         <Post title="Non Robot"></Post>
+        <Showview title="Kotlin" v-bind:view=100></Showview>
+        <Showview title="Golang"></Showview>
     </div>
         <script src="app.js" charset="utf-8"></script>
 
