--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
   </head>
   <body>
     <div id="vue-app">
-        <Post title="Non Robot"></Post>
-        <Showview title="Kotlin" v-bind:view=100></Showview>
-        <Showview title="Golang"></Showview>
+      <ul>
+        <li v-for="comment in comments"
+        is="Showcomment"
+        v-bind:commentpost="comment"
+        ></li>
+      </ul>
+      <input type="text" v-model="newComment" v-on:keyup.enter="addComment">
     </div>
         <script src="app.js" charset="utf-8"></script>
 
