--- a/Vue-Firebase/index.html
+++ b/Vue-Firebase/index.html
@@ -25,8 +25,25 @@
               firebase.initializeApp(config);
             </script>
 
-            <div class="container col-md">
+            <div class="container col-md-6" id="comment">
                 <h2>Vue.js + Firebase</h2>
+                <!-- display comment -->
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">สวัสดีตอนบ่าย</h5>
+                        <p class="card-text text-muted">นิรนาม</p>
+                    </div>
+                </div>
+                <hr>
+                <!-- form design -->
+                <form class="form-group">
+                    <div>
+                        <textarea name="name" class="form-control"></textarea>
+                    </div>
+                    <label for="">ชื่อ :</label><br>
+                    <input type="text" class="form-control"><br>
+                    <button type="button" class="btn btn-primary">Comment</button>
+                </form>
             </div>
     </body>
 </html>
