--- a/Vue-Firebase/index.html
+++ b/Vue-Firebase/index.html
@@ -25,25 +25,27 @@
               firebase.initializeApp(config);
             </script>
 
-            <div class="container col-md-6" id="comment">
+            <div class="container col-md-6" id="vue-app">
                 <h2>Vue.js + Firebase</h2>
                 <!-- display comment -->
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">สวัสดีตอนบ่าย</h5>
-                        <p class="card-text text-muted">นิรนาม</p>
+                        <h5 class="card-title"></h5>
+                        <p class="card-text text-muted"></p>
                     </div>
                 </div>
                 <hr>
                 <!-- form design -->
-                <form class="form-group">
+                <form class="form-group" @submit.prevent="storeMessage">
                     <div>
-                        <textarea name="name" class="form-control"></textarea>
+                        <textarea name="name" class="form-control" v-model="messageText"></textarea>
                     </div>
                     <label for="">ชื่อ :</label><br>
-                    <input type="text" class="form-control"><br>
-                    <button type="button" class="btn btn-primary">Comment</button>
+                    <input type="text" class="form-control" v-model="name"><br>
+                    <button type="submit" class="btn btn-primary">Comment</button>
                 </form>
             </div>
+
+            <script src="app.js" charset="utf-8"></script>
     </body>
 </html>
