--- a/Vue-Firebase/index.html
+++ b/Vue-Firebase/index.html
@@ -28,10 +28,10 @@
             <div class="container col-md-6" id="vue-app">
                 <h2>Vue.js + Firebase</h2>
                 <!-- display comment -->
-                <div class="card">
+                <div class="card" v-for="message in messages">
                     <div class="card-body">
-                        <h5 class="card-title"></h5>
-                        <p class="card-text text-muted"></p>
+                        <h5 class="card-title">{{message.text}}</h5>
+                        <p class="card-text text-muted">{{message.name}}</p>
                     </div>
                 </div>
                 <hr>
