Edit Code & Update README.md

--- a/Mini_Workshop/Weather_Forecast_System/index.html
+++ b/Mini_Workshop/Weather_Forecast_System/index.html
@@ -106,9 +106,9 @@
 </style>
 
     <div class="container" id="weather">
-    <h2 align="center">Mini Workshop : Weather Forecast System</h2>
+   <!-- <h2 align="center">Mini Workshop : Weather Forecast System</h2> -->
     <div id="setting">
-        <h3>Choose Province</h3>
+    <!-- <h3>Choose Province</h3> -->  
         <select class="form-control">
             <option value="1225448">Bangkok</option>
         </select>
